Removed anv_mapfixes_ prefixes

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -554,14 +554,14 @@ add:
 ; --- Block LOS under snack machine
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_snack_elevator,AddOutput,mins -22 -16 -4,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snack_elevator,AddOutput,maxs 22 16 4,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snack_elevator,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_snack_elevator,AddOutput,mins -22 -16 -4,0,-1"
+	"OnMapSpawn" "losfix_snack_elevator,AddOutput,maxs 22 16 4,0,-1"
+	"OnMapSpawn" "losfix_snack_elevator,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "1997 5517 2468"
-	"targetname" "anv_mapfixes_losfix_snack_elevator"
+	"targetname" "losfix_snack_elevator"
 }
 ; --- Props in the Banquet Hall A area for spawns
 {
@@ -583,14 +583,14 @@ add:
 ; --- Block LOS under snack machine
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_snack_hall,AddOutput,mins -1 -22 -4,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snack_hall,AddOutput,maxs 1 22 4,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snack_hall,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_snack_hall,AddOutput,mins -1 -22 -4,0,-1"
+	"OnMapSpawn" "losfix_snack_hall,AddOutput,maxs 1 22 4,0,-1"
+	"OnMapSpawn" "losfix_snack_hall,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-378 5337 1188"
-	"targetname" "anv_mapfixes_losfix_snack_hall"
+	"targetname" "losfix_snack_hall"
 }
 ; --- Drinks machines behind the check-in desk by the end saferoom
 {
