--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -1117,38 +1117,38 @@ add:
 ; --- Block LOS under buses
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_a,AddOutput,mins -212 -1 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_a,AddOutput,maxs 212 1 10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_b,AddOutput,mins -1 -93 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_b,AddOutput,maxs 1 93 10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_b,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_c,AddOutput,mins -47 -1 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_c,AddOutput,maxs 47 1 10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_c,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_d,AddOutput,mins -1 -93 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_d,AddOutput,maxs 1 93 10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_end_bus_d,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_end_bus_a,AddOutput,mins -212 -1 -10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_a,AddOutput,maxs 212 1 10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_end_bus_b,AddOutput,mins -1 -93 -10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_b,AddOutput,maxs 1 93 10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_end_bus_c,AddOutput,mins -47 -1 -10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_c,AddOutput,maxs 47 1 10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_c,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_end_bus_d,AddOutput,mins -1 -93 -10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_d,AddOutput,maxs 1 93 10,0,-1"
+	"OnMapSpawn" "losfix_end_bus_d,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-271 -756 -1080"
-	"targetname" "anv_mapfixes_losfix_end_bus_a"
+	"targetname" "losfix_end_bus_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1463 -2337 -1080"
-	"targetname" "anv_mapfixes_losfix_end_bus_b"
+	"targetname" "losfix_end_bus_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1415 -2429 -1080"
-	"targetname" "anv_mapfixes_losfix_end_bus_c"
+	"targetname" "losfix_end_bus_c"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1369 -2523 -1080"
-	"targetname" "anv_mapfixes_losfix_end_bus_d"
+	"targetname" "losfix_end_bus_d"
 }
 ; --- Parking lot light by the end saferoom
 {
