--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1035,14 +1035,14 @@ add:
 ; --- Add collision to sign and block LOS 
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_sign,AddOutput,mins -104 -2 -34,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_sign,AddOutput,maxs 104 2 34,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_gamehut_sign,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_gamehut_sign,AddOutput,mins -104 -2 -34,0,-1"
+	"OnMapSpawn" "losfix_gamehut_sign,AddOutput,maxs 104 2 34,0,-1"
+	"OnMapSpawn" "losfix_gamehut_sign,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "2720 -82 208"
-	"targetname" "anv_mapfixes_losfix_gamehut_sign"
+	"targetname" "losfix_gamehut_sign"
 }
 {
 	"classname" "env_physics_blocker"
@@ -1956,14 +1956,14 @@ add:
 ; --- Add collision to sign and block LOS 
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_sign,AddOutput,mins -2 -104 -45,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_sign,AddOutput,maxs 2 104 45,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_sign,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_saferoom_sign,AddOutput,mins -2 -104 -45,0,-1"
+	"OnMapSpawn" "losfix_saferoom_sign,AddOutput,maxs 2 104 45,0,-1"
+	"OnMapSpawn" "losfix_saferoom_sign,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "1732 2728 192"
-	"targetname" "anv_mapfixes_losfix_saferoom_sign"
+	"targetname" "losfix_saferoom_sign"
 }
 {
 	"classname" "env_physics_blocker"
