--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -641,17 +641,17 @@ add:
 ; --- Fix LOS on carnival sign props before barns
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign1,AddOutput,mins -104 -2 -32,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign1,AddOutput,maxs 104 2 32,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign1,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign2,AddOutput,mins -104 -2 -32,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign2,AddOutput,maxs 104 2 32,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sign2,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_sign1,AddOutput,mins -104 -2 -32,0,-1"
+	"OnMapSpawn" "losfix_sign1,AddOutput,maxs 104 2 32,0,-1"
+	"OnMapSpawn" "losfix_sign1,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_sign2,AddOutput,mins -104 -2 -32,0,-1"
+	"OnMapSpawn" "losfix_sign2,AddOutput,maxs 104 2 32,0,-1"
+	"OnMapSpawn" "losfix_sign2,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "144 1235 30"
-	"targetname" "anv_mapfixes_losfix_sign1"
+	"targetname" "losfix_sign1"
 }
 {
 	"classname" "env_physics_blocker"
@@ -664,7 +664,7 @@ add:
 {
 	"classname" "func_brush"
 	"origin" "-192 756 30"
-	"targetname" "anv_mapfixes_losfix_sign2"
+	"targetname" "losfix_sign2"
 }
 {
 	"classname" "env_physics_blocker"
@@ -1251,14 +1251,14 @@ add:
 ; --- Auto crouch trigger for gazebo ladder
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladder,AddOutput,mins -56 -2 -6,0,-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladder,AddOutput,maxs 56 2 6,0,-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_gazebo_ladder,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "duckqol_gazebo_ladder,AddOutput,mins -56 -2 -6,0,-1"
+	"OnMapSpawn" "duckqol_gazebo_ladder,AddOutput,maxs 56 2 6,0,-1"
+	"OnMapSpawn" "duckqol_gazebo_ladder,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "trigger_playermovement"
 	"origin" "3568 903 -7"
-	"targetname" "anv_mapfixes_duckqol_gazebo_ladder"
+	"targetname" "duckqol_gazebo_ladder"
 	"spawnflags" "2049"
 }
 ; --- Infected ladder on food cart by the bumper cars
