--- a/cfg/stripper/maps/c2m5_concert.cfg
+++ b/cfg/stripper/maps/c2m5_concert.cfg
@@ -191,22 +191,22 @@ add:
 ; --- Fix LOS under snack machines
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smitty,AddOutput,mins -22 -1 -6,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smitty,AddOutput,maxs 22 1 6,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_smitty,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jake,AddOutput,mins -46 -1 -6,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jake,AddOutput,maxs 46 1 6,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_snacks_jake,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_snacks_smitty,AddOutput,mins -22 -1 -6,0,-1"
+	"OnMapSpawn" "losfix_snacks_smitty,AddOutput,maxs 22 1 6,0,-1"
+	"OnMapSpawn" "losfix_snacks_smitty,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_snacks_jake,AddOutput,mins -46 -1 -6,0,-1"
+	"OnMapSpawn" "losfix_snacks_jake,AddOutput,maxs 46 1 6,0,-1"
+	"OnMapSpawn" "losfix_snacks_jake,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2804 1779 134"
-	"targetname" "anv_mapfixes_losfix_snacks_smitty"
+	"targetname" "losfix_snacks_smitty"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1800 1777 134"
-	"targetname" "anv_mapfixes_losfix_snacks_jake"
+	"targetname" "losfix_snacks_jake"
 }
 
 
