--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -541,435 +541,435 @@ add:
 {
 	"classname" "logic_auto"
 	; --- Large trees
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_a,AddOutput,mins -48 -1 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_a,AddOutput,maxs 48 1 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_b,AddOutput,mins -1 -48 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_b,AddOutput,maxs 1 48 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_large_a,AddOutput,mins -48 -1 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_large_a,AddOutput,maxs 48 1 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_large_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_large_b,AddOutput,mins -1 -48 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_large_b,AddOutput,maxs 1 48 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_large_b,AddOutput,solid 2,0,-1"
 	; --- Medium trees
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_a,AddOutput,mins -28 -1 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_a,AddOutput,maxs 28 1 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_b,AddOutput,mins -1 -28 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_b,AddOutput,maxs 1 28 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_medium_a,AddOutput,mins -28 -1 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_medium_a,AddOutput,maxs 28 1 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_medium_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_medium_b,AddOutput,mins -1 -28 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_medium_b,AddOutput,maxs 1 28 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_medium_b,AddOutput,solid 2,0,-1"
 	; --- Small trees
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_a,AddOutput,mins -23 -1 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_a,AddOutput,maxs 23 1 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_b,AddOutput,mins -1 -23 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_b,AddOutput,maxs 1 23 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_small_a,AddOutput,mins -23 -1 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_small_a,AddOutput,maxs 23 1 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_small_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_small_b,AddOutput,mins -1 -23 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_small_b,AddOutput,maxs 1 23 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_small_b,AddOutput,solid 2,0,-1"
 	; --- Very small trees
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_a,AddOutput,mins -19 -1 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_a,AddOutput,maxs 19 1 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_b,AddOutput,mins -1 -19 -18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_b,AddOutput,maxs 1 19 18,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_vsmall_a,AddOutput,mins -19 -1 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_vsmall_a,AddOutput,maxs 19 1 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_vsmall_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_swamptree_vsmall_b,AddOutput,mins -1 -19 -18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_vsmall_b,AddOutput,maxs 1 19 18,0,-1"
+	"OnMapSpawn" "losfix_swamptree_vsmall_b,AddOutput,solid 2,0,-1"
 }
 ; --- Post-ferry area
 {
 	"classname" "func_brush"
 	"origin" "-3484 6035 -36"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3484 6035 -36"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3401 5245 -18"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3401 5245 -18"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3154 6249 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3154 6249 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2527 6540 -38"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2527 6540 -38"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2563 7274 -28"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2563 7274 -28"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1494 7386 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1494 7386 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1197 7676 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1197 7676 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1020 7104 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1020 7104 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3265 5594 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3265 5594 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3037 9422 -10"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3037 9422 -10"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1858 5767 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1858 5767 -31"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-24 6316 -43"
-	"targetname" "anv_mapfixes_losfix_swamptree_small_a"
+	"targetname" "losfix_swamptree_small_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-24 6316 -43"
-	"targetname" "anv_mapfixes_losfix_swamptree_small_b"
+	"targetname" "losfix_swamptree_small_b"
 }
 ; --- End saferoom area
 {
 	"classname" "func_brush"
 	"origin" "-2759 4426 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2759 4426 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2838 4400 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2838 4400 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-636 4507 -30"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-636 4507 -30"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-493 4101 -34"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-493 4101 -34"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-102 4188 -42"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-102 4188 -42"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1104 2530 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1104 2530 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-911 2375 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-911 2375 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-967 2318 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-967 2318 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1297 2225 -30"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1297 2225 -30"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1212 1694 -38"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1212 1694 -38"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1269 1728 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1269 1728 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1739 1831 -34"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1739 1831 -34"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1798 1769 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1798 1769 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2354 1849 -44"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2354 1849 -44"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2556 2942 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2556 2942 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2575 2875 -37"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2575 2875 -37"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2523 2835 -40"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2523 2835 -40"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2362 2540 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2362 2540 -33"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3077 2484 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3077 2484 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2868 2280 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2868 2280 -39"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3061 1587 -38"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+	"targetname" "losfix_swamptree_large_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3061 1587 -38"
-	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+	"targetname" "losfix_swamptree_large_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1187 1781 -43"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1187 1781 -43"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1332 1761 -42"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1332 1761 -42"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3017 2653 -36"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3017 2653 -36"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2754 2300 -44"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2754 2300 -44"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3215 1711 -43"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+	"targetname" "losfix_swamptree_medium_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3215 1711 -43"
-	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+	"targetname" "losfix_swamptree_medium_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2031 4272 -40"
-	"targetname" "anv_mapfixes_losfix_swamptree_vsmall_a"
+	"targetname" "losfix_swamptree_vsmall_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-2031 4272 -40"
-	"targetname" "anv_mapfixes_losfix_swamptree_vsmall_b"
+	"targetname" "losfix_swamptree_vsmall_b"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1266 3438 -40"
-	"targetname" "anv_mapfixes_losfix_swamptree_vsmall_a"
+	"targetname" "losfix_swamptree_vsmall_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-1266 3438 -40"
-	"targetname" "anv_mapfixes_losfix_swamptree_vsmall_b"
+	"targetname" "losfix_swamptree_vsmall_b"
 }
 
 
@@ -1009,27 +1009,27 @@ add:
 ; --- Fix LOS under SUV
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_suv_a,AddOutput,mins -44 -3 -14,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_suv_a,AddOutput,maxs 44 3 14,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_suv_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_suv_b,AddOutput,mins -3 -44 -14,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_suv_b,AddOutput,maxs 3 44 14,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_suv_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_suv_a,AddOutput,mins -44 -3 -14,0,-1"
+	"OnMapSpawn" "losfix_suv_a,AddOutput,maxs 44 3 14,0,-1"
+	"OnMapSpawn" "losfix_suv_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_suv_b,AddOutput,mins -3 -44 -14,0,-1"
+	"OnMapSpawn" "losfix_suv_b,AddOutput,maxs 3 44 14,0,-1"
+	"OnMapSpawn" "losfix_suv_b,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-12059 10246 179"
-	"targetname" "anv_mapfixes_losfix_suv_a"
+	"targetname" "losfix_suv_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-12153 10159 179"
-	"targetname" "anv_mapfixes_losfix_suv_a"
+	"targetname" "losfix_suv_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-12106 10202 179"
-	"targetname" "anv_mapfixes_losfix_suv_b"
+	"targetname" "losfix_suv_b"
 }
 ; --- Fence cover by the dumpster on the right of saferoom
 {
@@ -1052,22 +1052,22 @@ add:
 ; --- Fix LOS under fence covers
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_fencegas_a,AddOutput,mins -1 -64 -5,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_fencegas_a,AddOutput,maxs 1 64 5,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_fencegas_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_fencegas_b,AddOutput,mins -64 -1 -5,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_fencegas_b,AddOutput,maxs 64 1 5,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_fencegas_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_fencegas_a,AddOutput,mins -1 -64 -5,0,-1"
+	"OnMapSpawn" "losfix_fencegas_a,AddOutput,maxs 1 64 5,0,-1"
+	"OnMapSpawn" "losfix_fencegas_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_fencegas_b,AddOutput,mins -64 -1 -5,0,-1"
+	"OnMapSpawn" "losfix_fencegas_b,AddOutput,maxs 64 1 5,0,-1"
+	"OnMapSpawn" "losfix_fencegas_b,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-10935 9266 164"
-	"targetname" "anv_mapfixes_losfix_fencegas_a"
+	"targetname" "losfix_fencegas_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "-11584 8578 164"
-	"targetname" "anv_mapfixes_losfix_fencegas_b"
+	"targetname" "losfix_fencegas_b"
 }
 ; --- Shrub wall in the far left area after the ferry
 {
