--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -1080,22 +1080,22 @@ add:
 ; --- Fix LOS under pickup
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup_a,AddOutput,mins -48 -1 -15,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup_a,AddOutput,maxs 48 1 15,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup_b,AddOutput,mins -1 -48 -15,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup_b,AddOutput,maxs 1 48 15,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_blue_pickup_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_blue_pickup_a,AddOutput,mins -48 -1 -15,0,-1"
+	"OnMapSpawn" "losfix_blue_pickup_a,AddOutput,maxs 48 1 15,0,-1"
+	"OnMapSpawn" "losfix_blue_pickup_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_blue_pickup_b,AddOutput,mins -1 -48 -15,0,-1"
+	"OnMapSpawn" "losfix_blue_pickup_b,AddOutput,maxs 1 48 15,0,-1"
+	"OnMapSpawn" "losfix_blue_pickup_b,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "3348 -905 110"
-	"targetname" "anv_mapfixes_losfix_blue_pickup_a"
+	"targetname" "losfix_blue_pickup_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "3395 -856 110"
-	"targetname" "anv_mapfixes_losfix_blue_pickup_b"
+	"targetname" "losfix_blue_pickup_b"
 }
 ; --- Boxes in the boat garage by the sugarmill saferoom
 {
