--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -250,14 +250,14 @@ add:
 ; --- Block LOS under car
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_car,AddOutput,mins -67 -2 -9,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_car,AddOutput,maxs 67 2 9,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_car,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_saferoom_car,AddOutput,mins -67 -2 -9,0,-1"
+	"OnMapSpawn" "losfix_saferoom_car,AddOutput,maxs 67 2 9,0,-1"
+	"OnMapSpawn" "losfix_saferoom_car,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3603 -1767 -374"
-	"targetname" "anv_mapfixes_losfix_saferoom_car"
+	"targetname" "losfix_saferoom_car"
 }
 ; --- Apply color selection to new car
 modify:
