--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -652,14 +652,14 @@ add:
 ; --- Block LOS under van by the sewer drop
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_sewer_drop_van_extra,AddOutput,mins -43 -1 -13,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sewer_drop_van_extra,AddOutput,maxs 43 1 13,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sewer_drop_van_extra,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_sewer_drop_van_extra,AddOutput,mins -43 -1 -13,0,-1"
+	"OnMapSpawn" "losfix_sewer_drop_van_extra,AddOutput,maxs 43 1 13,0,-1"
+	"OnMapSpawn" "losfix_sewer_drop_van_extra,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "3890 735 8"
-	"targetname" "anv_mapfixes_losfix_sewer_drop_van_extra"
+	"targetname" "losfix_sewer_drop_van_extra"
 }
 ; --- Clipping on stairs after the alarm cars to stop players getting stuck
 {
@@ -850,14 +850,14 @@ add:
 ; --- Block LOS under van
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_sewer_street_van,AddOutput,mins -1 -109 -11,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sewer_street_van,AddOutput,maxs 1 109 11,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_sewer_street_van,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_sewer_street_van,AddOutput,mins -1 -109 -11,0,-1"
+	"OnMapSpawn" "losfix_sewer_street_van,AddOutput,maxs 1 109 11,0,-1"
+	"OnMapSpawn" "losfix_sewer_street_van,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "4226 1714 9"
-	"targetname" "anv_mapfixes_losfix_sewer_street_van"
+	"targetname" "losfix_sewer_street_van"
 }
 ; --- Manhole cover by the sewer drop
 {
