--- a/cfg/stripper/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/maps/c5m4_quarter.cfg
@@ -269,14 +269,14 @@ add:
 ; --- Auto crouch trigger to prevent a stuck spot on the stairs in the pool room
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuck,AddOutput,mins -1 -4.5 -14,0,-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuck,AddOutput,maxs 1 4.5 14,0,-1"
-	"OnMapSpawn" "anv_mapfixes_duckqol_pool_room_stuck,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "duckqol_pool_room_stuck,AddOutput,mins -1 -4.5 -14,0,-1"
+	"OnMapSpawn" "duckqol_pool_room_stuck,AddOutput,maxs 1 4.5 14,0,-1"
+	"OnMapSpawn" "duckqol_pool_room_stuck,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "trigger_playermovement"
 	"origin" "-126 1888.5 326"
-	"targetname" "anv_mapfixes_duckqol_pool_room_stuck"
+	"targetname" "duckqol_pool_room_stuck"
 	"spawnflags" "2049"
 }
 ; --- Block stuck spots on out of bounds roofs by the final street
