--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -457,14 +457,14 @@ add:
 ; --- Fix LOS on jukebox in pool room
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_pool,AddOutput,mins -11 -18 -32,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_pool,AddOutput,maxs 11 18 32,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_jukebox_pool,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_jukebox_pool,AddOutput,mins -11 -18 -32,0,-1"
+	"OnMapSpawn" "losfix_jukebox_pool,AddOutput,maxs 11 18 32,0,-1"
+	"OnMapSpawn" "losfix_jukebox_pool,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "1457 1200 16"
-	"targetname" "anv_mapfixes_losfix_jukebox_pool"
+	"targetname" "losfix_jukebox_pool"
 }
 {
 	"classname" "env_physics_blocker"
@@ -595,14 +595,14 @@ add:
 ; --- Fix LOS on sign
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_jazz_sign,AddOutput,mins -95 -2 -45,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_jazz_sign,AddOutput,maxs 95 2 45,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_jazz_sign,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_jazz_sign,AddOutput,mins -95 -2 -45,0,-1"
+	"OnMapSpawn" "losfix_jazz_sign,AddOutput,maxs 95 2 45,0,-1"
+	"OnMapSpawn" "losfix_jazz_sign,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "1564 4498 206"
-	"targetname" "anv_mapfixes_losfix_jazz_sign"
+	"targetname" "losfix_jazz_sign"
 }
 {
 	"classname" "env_physics_blocker"
@@ -1348,14 +1348,14 @@ add:
 ; --- Fix collision issues with gate
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_gate_alley,AddOutput,mins -34 -1 -49,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_gate_alley,AddOutput,maxs 34 1 49,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_gate_alley,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_gate_alley,AddOutput,mins -34 -1 -49,0,-1"
+	"OnMapSpawn" "losfix_gate_alley,AddOutput,maxs 34 1 49,0,-1"
+	"OnMapSpawn" "losfix_gate_alley,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "464 1944 -16"
-	"targetname" "anv_mapfixes_losfix_gate_alley"
+	"targetname" "losfix_gate_alley"
 }
 ; --- Infected ladder to get over fence
 {
