--- a/cfg/stripper/maps/c8m1_apartment.cfg
+++ b/cfg/stripper/maps/c8m1_apartment.cfg
@@ -396,12 +396,12 @@ modify:
 add:
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_fence_a,AddOutput,mins -128 -0.5 -68,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_fence_a,AddOutput,maxs 128 0.5 68,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_fence_a,AddOutput,solid 2,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_fence_b,AddOutput,mins -128 -0.5 -68,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_fence_b,AddOutput,maxs 128 0.5 68,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_fence_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_parking_fence_a,AddOutput,mins -128 -0.5 -68,0,-1"
+	"OnMapSpawn" "losfix_parking_fence_a,AddOutput,maxs 128 0.5 68,0,-1"
+	"OnMapSpawn" "losfix_parking_fence_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_parking_fence_b,AddOutput,mins -128 -0.5 -68,0,-1"
+	"OnMapSpawn" "losfix_parking_fence_b,AddOutput,maxs 128 0.5 68,0,-1"
+	"OnMapSpawn" "losfix_parking_fence_b,AddOutput,solid 2,0,-1"
 	; --- Make the fences non-solid to enable wallbanging
 	"OnMapSpawn" "anv_mapfixes_losblocker_fencea,DisableCollision,,15,-1"
 	"OnMapSpawn" "anv_mapfixes_losblocker_fenceb,DisableCollision,,15,-1"
@@ -409,12 +409,12 @@ add:
 {
 	"classname" "func_brush"
 	"origin" "896 3972.5 84"
-	"targetname" "anv_mapfixes_losfix_parking_fence_a"
+	"targetname" "losfix_parking_fence_a"
 }
 {
 	"classname" "func_brush"
 	"origin" "1408 3972.5 84"
-	"targetname" "anv_mapfixes_losfix_parking_fence_b"
+	"targetname" "losfix_parking_fence_b"
 }
 {
 	"classname" "env_physics_blocker"
@@ -737,14 +737,14 @@ add:
 ; --- Block LOS under truck
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_truck,AddOutput,mins -1 -58 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_truck,AddOutput,maxs 1 58 10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_parking_truck,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_parking_truck,AddOutput,mins -1 -58 -10,0,-1"
+	"OnMapSpawn" "losfix_parking_truck,AddOutput,maxs 1 58 10,0,-1"
+	"OnMapSpawn" "losfix_parking_truck,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "1287 4637 25"
-	"targetname" "anv_mapfixes_losfix_parking_truck"
+	"targetname" "losfix_parking_truck"
 }
 ; --- Van by the stairs before the end saferoom
 {
@@ -766,14 +766,14 @@ add:
 ; --- Block LOS under van
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_subway_van,AddOutput,mins -106 -1 -16,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_subway_van,AddOutput,maxs 106 1 16,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_subway_van,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_subway_van,AddOutput,mins -106 -1 -16,0,-1"
+	"OnMapSpawn" "losfix_subway_van,AddOutput,maxs 106 1 16,0,-1"
+	"OnMapSpawn" "losfix_subway_van,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "2697 4411 22"
-	"targetname" "anv_mapfixes_losfix_subway_van"
+	"targetname" "losfix_subway_van"
 }
 
 ; =====================================================
