--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -1024,14 +1024,14 @@ add:
 ; --- Block LOS under bus
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,mins -1 -220 -12,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,maxs 1 220 12,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_crashed_bus,AddOutput,mins -1 -220 -12,0,-1"
+	"OnMapSpawn" "losfix_crashed_bus,AddOutput,maxs 1 220 12,0,-1"
+	"OnMapSpawn" "losfix_crashed_bus,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-7980 -612 394"
-	"targetname" "anv_mapfixes_losfix_crashed_bus"
+	"targetname" "losfix_crashed_bus"
 }
 ; --- Concrete blocks after the event
 {
@@ -1070,14 +1070,14 @@ add:
 ; --- Block LOS under bus
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,mins -1 -205 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,maxs 1 205 10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_extra_bus,AddOutput,mins -1 -205 -10,0,-1"
+	"OnMapSpawn" "losfix_extra_bus,AddOutput,maxs 1 205 10,0,-1"
+	"OnMapSpawn" "losfix_extra_bus,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-8666 -1397 392"
-	"targetname" "anv_mapfixes_losfix_extra_bus"
+	"targetname" "losfix_extra_bus"
 }
 ; --- Hedges in the middle of the parking lot after the event
 {
@@ -1132,14 +1132,14 @@ add:
 ; --- Block LOS under van
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,mins -66 -1 -12,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,maxs 66 1 12,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_extra_van,AddOutput,mins -66 -1 -12,0,-1"
+	"OnMapSpawn" "losfix_extra_van,AddOutput,maxs 66 1 12,0,-1"
+	"OnMapSpawn" "losfix_extra_van,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-7652 -3918 394"
-	"targetname" "anv_mapfixes_losfix_extra_van"
+	"targetname" "losfix_extra_van"
 }
 
 ; =====================================================
