--- a/cfg/stripper/maps/c6m1_riverbank.cfg
+++ b/cfg/stripper/maps/c6m1_riverbank.cfg
@@ -876,14 +876,14 @@ add:
 ; --- Block LOS under bus
 {
 	"classname" "logic_auto"
-	"OnMapSpawn" "anv_mapfixes_losfix_bus_end,AddOutput,mins -163 -2 -10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_bus_end,AddOutput,maxs 163 2 10,0,-1"
-	"OnMapSpawn" "anv_mapfixes_losfix_bus_end,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "losfix_bus_end,AddOutput,mins -163 -2 -10,0,-1"
+	"OnMapSpawn" "losfix_bus_end,AddOutput,maxs 163 2 10,0,-1"
+	"OnMapSpawn" "losfix_bus_end,AddOutput,solid 2,0,-1"
 }
 {
 	"classname" "func_brush"
 	"origin" "-3127 542 712"
-	"targetname" "anv_mapfixes_losfix_bus_end"
+	"targetname" "losfix_bus_end"
 }
 
 ; =====================================================
