--- a/cfg/stripper/maps/c12m5_cornfield.cfg
+++ b/cfg/stripper/maps/c12m5_cornfield.cfg
@@ -1,4 +1,4 @@
-f; ############  DIRECTOR AND EVENT CHANGES  ###########
+; ############  DIRECTOR AND EVENT CHANGES  ###########
 ; =====================================================
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
